--- a/MusicNotesEditor/MusicNotesEditor.csproj
+++ b/MusicNotesEditor/MusicNotesEditor.csproj
@@ -8,4 +8,10 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Manufaktura.Controls" Version="1.4.0" />
+    <PackageReference Include="Manufaktura.Controls.Desktop" Version="1.0.0" />
+    <PackageReference Include="Manufaktura.Controls.WPF" Version="1.4.0" />
+  </ItemGroup>
+
 </Project>
