feature: adding additional lines

--- a/MusicNotesEditor/appsettings.json
+++ b/MusicNotesEditor/appsettings.json
@@ -1,3 +1,6 @@
 {
-	"snappingThreshold" : 6
+	"snappingThreshold" : 6,
+	"additionalStaffLines" : 2,
+	"staffDistance" : 80,
+	"additionalSystemDistance" : 25
 }
