add configuration class and file name title

--- a/MusicNotesEditor/appsettings.json
+++ b/MusicNotesEditor/appsettings.json
@@ -1,6 +1,10 @@
 {
-	"snappingThreshold" : 6,
-	"additionalStaffLines" : 2,
-	"staffDistance" : 80,
-	"additionalSystemDistance" : 25
+	"AppSettings": {
+		"SnappingThreshold" : 6,
+		"AdditionalStaffLines" : 2,
+		"StaffDistance" : 80,
+		"AdditionalSystemDistance" : 25,
+		"DefaultInitialMeasures" : 30,
+		"MinimalInitialMeasurePerStaff" : 8 
+	}
 }
