--- a/MusicNotesEditor/MusicNotesEditor.csproj
+++ b/MusicNotesEditor/MusicNotesEditor.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Manufaktura.Controls.Desktop" Version="1.0.0" />
     <PackageReference Include="Manufaktura.Controls.WPF" Version="1.4.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.10" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.10" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.10" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
