feat: Implement QR code generation and server initiation for mobile import
This commit introduces the functionality to generate a QR code and trigger the creation of the local server when the user selects "Import from Mobile".

--- a/MusicNotesEditor/MusicNotesEditor.csproj
+++ b/MusicNotesEditor/MusicNotesEditor.csproj
@@ -33,4 +33,8 @@
     </Resource>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MusicNotesEditor.LocalServer\MusicNotesEditor.LocalServer.csproj" />
+  </ItemGroup>
+
 </Project>
