lyrics adding and editing

--- a/MusicNotesEditor/appsettings.json
+++ b/MusicNotesEditor/appsettings.json
@@ -5,6 +5,7 @@
 		"StaffDistance" : 80,
 		"AdditionalSystemDistance" : 25,
 		"DefaultInitialMeasures" : 30,
-		"MinimalInitialMeasurePerStaff" : 8 
+		"MinimalInitialMeasurePerStaff" : 8 ,
+		"MaxCharactersInSyllable" : 5
 	}
 }
