--- a/MusicNotesEditor/MusicNotesEditor.csproj
+++ b/MusicNotesEditor/MusicNotesEditor.csproj
@@ -16,6 +16,9 @@
 	  <Reference Include="Manufaktura.Music">
 		  <HintPath>Libs\Manufaktura.Music.dll</HintPath>
 	  </Reference>
+	  <Reference Include="Manufaktura.Core">
+		  <HintPath>Libs\Manufaktura.Core.dll</HintPath>
+	  </Reference>
     <PackageReference Include="Manufaktura.Controls.Desktop" Version="1.0.0" />
     <PackageReference Include="Manufaktura.Controls.WPF" Version="1.4.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.0" />
